Renaming mo_ogone_3.0 to mo_ogone and adding classes from the old ogone module (SVN)

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ createModule.sh
 files/*
 moduleFiles/*
 composer.lock
-src/copy_this/modules/mo/mo_ogone_3.0/vendor/composer/*
-src/copy_this/modules/mo/mo_ogone_3.0/vendor/monolog/*
-src/copy_this/modules/mo/mo_ogone_3.0/vendor/psr/*
-src/copy_this/modules/mo/mo_ogone_3.0/vendor/cautoload.php
+src/copy_this/modules/mo/mo_ogone/vendor/composer/*
+src/copy_this/modules/mo/mo_ogone/vendor/monolog/*
+src/copy_this/modules/mo/mo_ogone/vendor/psr/*
+src/copy_this/modules/mo/mo_ogone/vendor/cautoload.php
