--- a/build.properties.sample
+++ b/build.properties.sample
@@ -1,19 +1,19 @@
 project.dir =
-project.name = mo_ogone_3.0
+project.name = mo_ogone
 project.version = 0.1
 project.stability = alpha
 
 coding.standard = Zend
 
-phpunit.testsuite.file = moogone_3.0MainTestSuite.php
-phpunit.testsuite.class = moogone_3.0MainTestSuite
+phpunit.testsuite.file = moogoneMainTestSuite.php
+phpunit.testsuite.class = moogoneMainTestSuite
 
 database.host = localhost
 database.user = root
 database.password = root
-database.database = mo_ogone_3.0__oxid_483
+database.database = mo_ogone__oxid_483
 
-test.installation = /htdocs/mo_ogone_3.0__shops/oxid/483/
-test.moduletestdir = /var/www/ogone_3.0484/eshop/modules/mo/mo_ogone_3.0/tests/
-test.dir = /htdocs/mo_ogone_3.0__oxid_5__shops/unittests
+test.installation = /htdocs/mo_ogone__shops/oxid/483/
+test.moduletestdir = /var/www/ogone484/eshop/modules/mo/mo_ogone/tests/
+test.dir = /htdocs/mo_ogone__oxid_5__shops/unittests
 test.password = admin
