--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="mo_ogone_3.0" default="test" basedir=".">
+<project name="mo_ogone" default="test" basedir=".">
 
     <!--
         Include local project properties.
