--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "config": {
-        "vendor-dir": "src/copy_this/modules/mo/mo_ogone_3.0/vendor"
+        "vendor-dir": "src/copy_this/modules/mo/mo_ogone/vendor"
     },
     
     "require": {
@@ -8,6 +8,6 @@
     },
     
     "autoload": {
-        "psr-4": {"Mediaopt\\": "src/copy_this/modules/mo/mo_ogone_3.0/vendor/Mediaopt/"}
+        "psr-4": {"Mediaopt\\": "src/copy_this/modules/mo/mo_ogone/vendor/Mediaopt/"}
     }
 }
