added project.json parameter

--- a/project.json
+++ b/project.json
@@ -4,7 +4,7 @@
     "pluginFolder": "Needed for Shopware Plugins",
     "prefix": "mo_",
     "suffix": "",
-    "projectName": "Ogone",
+    "projectName": "ogone",
     "pathToModule": "copy_this/modules/mo/mo_ogone",
     "compatibility": {
         "minimumVersion": " 4.7/5.0",
