--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ composer.lock
 src/copy_this/modules/mo/mo_ogone/vendor/composer/*
 src/copy_this/modules/mo/mo_ogone/vendor/monolog/*
 src/copy_this/modules/mo/mo_ogone/vendor/psr/*
+src/copy_this/modules/mo/mo_ogone/vendor/bcremer/*
 src/copy_this/modules/mo/mo_ogone/vendor/autoload.php
 /genericBundler/
 /shops/
