Fix build-brand-* configs

--- a/build-brand-ingenico.cfg
+++ b/build-brand-ingenico.cfg
@@ -4,13 +4,13 @@ CONFIG['git-url-base']='git@bitbucket.org:mediaopt/'
 CONFIG['git-url']='git@bitbucket.org:mediaopt/ingenico-oxid.git'
 CONFIG['brand']='ingenico'
 CONFIG['branch']='master'
-CONFIG['path-to-icon']='src/modules/mo/mo_ingenico/logo.png'
-REPLACE_IN_FILES['ingenico__']='ingenico__'
-REPLACE_IN_FILES['INGENICO']='INGENICO'
-REPLACE_IN_FILES['Ingenico']='Ingenico'
-REPLACE_IN_FILES['MOINOXD30']='MOINOXD30'
-REPLACE_IN_FILES['ingenico']='ingenico'
-REPLACE_IN_FILES['secure.ingenico.com']='secure.ingenico.de'
-REPLACE_IN_FILES['INOX170524']='INOX170524'
-RENAME_FILES['Ingenico']='Ingenico'
-RENAME_FILES['ingenico']='ingenico'
+CONFIG['path-to-icon']='src/modules/mo/mo_ogone/logo.png'
+REPLACE_IN_FILES['ogone__']='ingenico__'
+REPLACE_IN_FILES['OGONE']='INGENICO'
+REPLACE_IN_FILES['Ogone']='Ingenico'
+REPLACE_IN_FILES['MOOGOXDv30']='MOINOXD30'
+REPLACE_IN_FILES['ogone']='ingenico'
+REPLACE_IN_FILES['secure.ogone.com']='secure.ingenico.de'
+REPLACE_IN_FILES['##appid##']='INOX170524'
+RENAME_FILES['Ogone']='Ingenico'
+RENAME_FILES['ogone']='ingenico'
