--- a/build-brand-acceptance.cfg
+++ b/build-brand-acceptance.cfg
@@ -5,12 +5,21 @@ CONFIG['git-url']='git@bitbucket.org:mediaopt/acceptance-oxid.git'
 CONFIG['brand']='acceptance'
 CONFIG['branch']='master'
 CONFIG['path-to-icon']='src/modules/mo/mo_ingenico/logo.png'
-REPLACE_IN_FILES['ingenico__']='ptool__'
-REPLACE_IN_FILES['secure.ingenico.com']='secure.paytool.de'
-REPLACE_IN_FILES['INGENICO']='PAYTOOL'
-REPLACE_IN_FILES['Ingenico']='Paytool'
-REPLACE_IN_FILES['MOINOXD30']='MOPTOXD30'
+REPLACE_IN_FILES_DICT+=('ingenico__')
+REPLACE_IN_FILES_DICT+=('secure.ingenico.com')
+REPLACE_IN_FILES_DICT+=('INGENICO')
+REPLACE_IN_FILES_DICT+=('Ingenico')
+REPLACE_IN_FILES_DICT+=('MOINOXD30')
+REPLACE_IN_FILES_DICT+=('ingenico')
+REPLACE_IN_FILES_DICT+=('INOX170524')
 REPLACE_IN_FILES['ingenico']='paytool'
+REPLACE_IN_FILES['INGENICO']='PAYTOOL'
+REPLACE_IN_FILES['secure.ingenico.com']='secure.paytool.de'
+REPLACE_IN_FILES['ingenico__']='ptool__'
+REPLACE_IN_FILES['MOINOXD30']='MOPTOXD30'
 REPLACE_IN_FILES['INOX170524']='ACOX170524'
-RENAME_FILES['Ingenico']='Paytool'
+REPLACE_IN_FILES['Ingenico']='Paytool'
+RENAME_FILES_DICT+=('Ingenico')
+RENAME_FILES_DICT+=('ingenico')
 RENAME_FILES['ingenico']='paytool'
+RENAME_FILES['Ingenico']='Paytool'
