--- a/build-brand-concardis.cfg
+++ b/build-brand-concardis.cfg
@@ -5,6 +5,13 @@ CONFIG['git-url']='git@bitbucket.org:mediaopt/concardis-oxid.git'
 CONFIG['brand']='concardis'
 CONFIG['branch']='master'
 CONFIG['path-to-icon']='src/modules/mo/mo_ingenico/logo.png'
+REPLACE_IN_FILES_DICT+=('ingenico__')
+REPLACE_IN_FILES_DICT+=('secure.ingenico.com')
+REPLACE_IN_FILES_DICT+=('INGENICO')
+REPLACE_IN_FILES_DICT+=('Ingenico')
+REPLACE_IN_FILES_DICT+=('MOINOXD30')
+REPLACE_IN_FILES_DICT+=('ingenico')
+REPLACE_IN_FILES_DICT+=('INOX170524')
 REPLACE_IN_FILES['ingenico__']='payen__'
 REPLACE_IN_FILES['secure.ingenico.com']='secure.payengine.de'
 REPLACE_IN_FILES['INGENICO']='PAYENGINE'
@@ -12,5 +19,7 @@ REPLACE_IN_FILES['Ingenico']='Payengine'
 REPLACE_IN_FILES['MOINOXD30']='MOPEOXD30'
 REPLACE_IN_FILES['ingenico']='payengine'
 REPLACE_IN_FILES['INOX170524']='CCOX170524'
+RENAME_FILES_DICT+=('Ingenico')
+RENAME_FILES_DICT+=('ingenico')
 RENAME_FILES['Ingenico']='Payengine'
 RENAME_FILES['ingenico']='payengine'
