bugfix #6138 rename files correctly

--- a/build-brand-acceptance.cfg
+++ b/build-brand-acceptance.cfg
@@ -19,7 +19,9 @@ REPLACE_IN_FILES['ingenico__']='ptool__'
 REPLACE_IN_FILES['MOINOXD30']='MOPTOXD30'
 REPLACE_IN_FILES['INOX170524']='ACOX170524'
 REPLACE_IN_FILES['Ingenico']='Paytool'
+RENAME_FILES_DICT+=('ingenico__')
 RENAME_FILES_DICT+=('Ingenico')
 RENAME_FILES_DICT+=('ingenico')
+RENAME_FILES['ingenico__']='ptool__'
 RENAME_FILES['ingenico']='paytool'
 RENAME_FILES['Ingenico']='Paytool'
