--- a/build-brand-concardis.cfg
+++ b/build-brand-concardis.cfg
@@ -19,7 +19,9 @@ REPLACE_IN_FILES['Ingenico']='Payengine'
 REPLACE_IN_FILES['MOINOXD30']='MOPEOXD30'
 REPLACE_IN_FILES['ingenico']='payengine'
 REPLACE_IN_FILES['INOX170524']='CCOX170524'
+RENAME_FILES_DICT+=('ingenico__')
 RENAME_FILES_DICT+=('Ingenico')
 RENAME_FILES_DICT+=('ingenico')
+RENAME_FILES['ingenico__']='payen__'
 RENAME_FILES['Ingenico']='Payengine'
 RENAME_FILES['ingenico']='payengine'
