bugfixes regarding repo renaming

--- a/build-brand-acceptance.cfg
+++ b/build-brand-acceptance.cfg
@@ -6,7 +6,8 @@ CONFIG['brand']='acceptance'
 CONFIG['branch']='master'
 CONFIG['path-to-icon']='src/modules/mo/mo_ingenico/logo.png'
 REPLACE_IN_FILES_DICT+=('ingenico__')
-REPLACE_IN_FILES_DICT+=('secure.ingenico.com')
+REPLACE_IN_FILES_DICT+=('secure.ogone.com')
+REPLACE_IN_FILES_DICT+=('ogone.test.v-psp.com')
 REPLACE_IN_FILES_DICT+=('INGENICO')
 REPLACE_IN_FILES_DICT+=('Ingenico')
 REPLACE_IN_FILES_DICT+=('MOINOXD30')
@@ -14,7 +15,8 @@ REPLACE_IN_FILES_DICT+=('ingenico')
 REPLACE_IN_FILES_DICT+=('INOX170524')
 REPLACE_IN_FILES['ingenico']='paytool'
 REPLACE_IN_FILES['INGENICO']='PAYTOOL'
-REPLACE_IN_FILES['secure.ingenico.com']='secure.paytool.de'
+REPLACE_IN_FILES['secure.ogone.com']='secure.paytool.de'
+REPLACE_IN_FILES['ogone.test.v-psp.com']='paytool.test.v-psp.com'
 REPLACE_IN_FILES['ingenico__']='ptool__'
 REPLACE_IN_FILES['MOINOXD30']='MOPTOXD30'
 REPLACE_IN_FILES['INOX170524']='ACOX170524'
