--- a/build-brand-concardis.cfg
+++ b/build-brand-concardis.cfg
@@ -6,14 +6,16 @@ CONFIG['brand']='concardis'
 CONFIG['branch']='master'
 CONFIG['path-to-icon']='src/modules/mo/mo_ingenico/logo.png'
 REPLACE_IN_FILES_DICT+=('ingenico__')
-REPLACE_IN_FILES_DICT+=('secure.ingenico.com')
+REPLACE_IN_FILES_DICT+=('secure.ogone.com')
+REPLACE_IN_FILES_DICT+=('ogone.test.v-psp.com')
 REPLACE_IN_FILES_DICT+=('INGENICO')
 REPLACE_IN_FILES_DICT+=('Ingenico')
 REPLACE_IN_FILES_DICT+=('MOINOXD30')
 REPLACE_IN_FILES_DICT+=('ingenico')
 REPLACE_IN_FILES_DICT+=('INOX170524')
 REPLACE_IN_FILES['ingenico__']='payen__'
-REPLACE_IN_FILES['secure.ingenico.com']='secure.payengine.de'
+REPLACE_IN_FILES['secure.ogone.com']='secure.payengine.de'
+REPLACE_IN_FILES['ogone.test.v-psp.com']='payengine.test.v-psp.com'
 REPLACE_IN_FILES['INGENICO']='PAYENGINE'
 REPLACE_IN_FILES['Ingenico']='Payengine'
 REPLACE_IN_FILES['MOINOXD30']='MOPEOXD30'
